--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@handsontable/react": "^15.0.0",
     "@mui/material": "^6.4.0",
     "@mui/x-data-grid": "^7.24.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "handsontable": "^15.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
